// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/channel_notifications_modal/CollapseView should match snapshot, DESKTOP on collapsed view 1`] = `
<SettingItemMin
  describe={
    <Describe
      globalNotifyLevel="default"
      isCollapsed={true}
      memberNotifyLevel="all"
      section="desktop"
    />
  }
  focused={false}
  section="desktop"
  title={
    <SectionTitle
      section="desktop"
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/channel_notifications_modal/CollapseView should match snapshot, MARK_UNREAD on collapsed view 1`] = `
<SettingItemMin
  describe={
    <Describe
      globalNotifyLevel={null}
      isCollapsed={true}
      memberNotifyLevel="all"
      section="markUnread"
    />
  }
  focused={false}
  section="markUnread"
  title={
    <SectionTitle
      section="markUnread"
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/channel_notifications_modal/CollapseView should match snapshot, PUSH on collapsed view 1`] = `
<SettingItemMin
  describe={
    <Describe
      globalNotifyLevel="default"
      isCollapsed={true}
      memberNotifyLevel="all"
      section="push"
    />
  }
  focused={false}
  section="push"
  title={
    <SectionTitle
      section="push"
    />
  }
  updateSection={[Function]}
/>
`;
